<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ED5734"
    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <TextView
            android:id="@+id/tv_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text=""
            android:textColor="#FFF"
            android:textSize="18sp" />
        <!--<TextView-->
            <!--android:id="@+id/tv_toolbar_add_widget"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:layout_marginRight="5dp"-->
            <!--android:layout_marginEnd="5dp"-->
            <!--android:text="Add Widget"-->
            <!--android:textColor="#FFF"-->
            <!--android:textSize="18sp" />-->

    </RelativeLayout>


</android.support.v7.widget.Toolbar>
